# codex

./: .gitignore  Procfile  README.md  codex.py  pyproject.toml  requirements.txt
.github/workflows/: porter_discussion_cry_good.yml
codex/: settings.py  urls.py
main/: forms.py  models.py  urls.py  utils.py  views.py
main/migrations/: 0001_initial.py
main/static/CACHE/css/: style.d6ff3016c650.css
main/static/css/: style.scss
main/static/js/: main.js
main/templates/: base.html  edit-note.html  home.html  new-note.html  note.html  view-note.html
pdf/: forms.py  urls.py  utils.py  views.py
pdf/templates/: list-pdf.html  new-pdf.html  view-pdf.html
static/CACHE/css/: style.0116330bda02.css  style.06856f8b539f.css  style.23337793ede0.css  style.492f1b5d0cd4.css  style.5236d358cd6f.css  style.526b15d32a8f.css  style.56959eb751fe.css  style.6650aaf25627.css  style.7e81db1e109a.css  style.87bd84153ac3.css  style.ab916301f994.css  style.ad9e410ce118.css  style.c6541a7edf80.css  style.ce88d897647e.css
static/css/: satoshi.css  style.scss
templates/: base.html  footer.html  index.html
weblinks/: urls.py  utils.py  views.py
weblinks/templates/: weblinks.html
webpages/: apps.py  forms.py  models.py  urls.py  utils.py  views.py
webpages/templates/: main.html  new-webpage.html  new_html.html  view-webpage.html  webpage-list.html
