[tool.poetry]
name = "codex"
version = "0.1.0"
description = ""
authors = ["khushmeeet <khushmeetsingh1996@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.4"
djongo = "^1.3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
